<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailActivity">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:fitsSystemWindows="true"
            android:maxLines="1"
            app:contentScrim="@color/colorPrimary"
            app:expandedTitleTextAppearance="@android:color/transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <LinearLayout
                android:id="@+id/backdrop_linerLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical"
                app:layout_collapseMode="parallax">

                <ImageView
                    android:id="@+id/backdrop"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_recipe_image"
                    android:background="@drawable/pholder"
                    android:contentDescription="@string/recipe_image"
                    android:scaleType="centerCrop" />

                <RelativeLayout

                    android:id="@+id/recipeName_linerLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/background_light">

                    <TextView
                        android:id="@+id/recipeName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_normal"
                        android:gravity="top"
                        android:text="@string/Recipe_Name"
                        android:textAllCaps="true"
                        android:textAppearance="@style/TextAppearance.StatusBar.EventContent.Title"
                        android:textColor="@android:color/background_dark"
                        android:textSize="@dimen/text_size_large" />

                    <TextView
                        android:id="@+id/serves"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/recipeName"
                        android:layout_gravity="bottom"
                        android:layout_marginLeft="@dimen/margin_normal"
                        android:layout_marginStart="@dimen/margin_normal"
                        android:text="@string/serving"
                        android:textColor="@android:color/tertiary_text_dark" />


                    <CheckBox
                        android:id="@+id/addWidgetBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_above="@+id/viewDivider"
                        android:layout_alignEnd="@+id/recipeName"
                        android:layout_alignRight="@+id/recipeName"
                        android:layout_gravity="end|bottom"
                        android:button="@drawable/add_ingredient_to_widget"
                        android:checked="false" />

                    <View
                        android:id="@+id/viewDivider"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/view_thickness"
                        android:layout_below="@+id/serves"
                        android:layout_marginTop="@dimen/margin_less"
                        android:background="@android:color/darker_gray">

                    </View>
                </RelativeLayout>

            </LinearLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:scrollbars="none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/nestedLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ingredient_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_normal"
                android:text="@string/ingredients"
                android:textColor="@android:color/background_dark"
                android:textSize="@dimen/text_normal"
                android:textStyle="bold" />


            <android.support.v7.widget.RecyclerView
                android:id="@+id/ingredient_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_more">

            </android.support.v7.widget.RecyclerView>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_thickness"
                android:layout_marginTop="@dimen/margin_less"
                android:background="@android:color/darker_gray">

            </View>


            <TextView
                android:id="@+id/steps_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_normal"
                android:text="@string/directions"
                android:textColor="@android:color/background_dark"
                android:textSize="@dimen/text_normal"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/steps_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_more" />

            <Button
                android:id="@+id/show_steps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_normal"
                android:background="@color/colorLightPrimary"
                android:text="@string/show_steps"
                android:textAllCaps="true"
                android:textColor="@android:color/background_light"
                android:textStyle="bold" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>