<resources>
    <string name="app_name">Baking App</string>
    <string name="steps">STEPS</string>
    <string name="dummy">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text. </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Recipe_Name">Recipe Name</string>
    <string name="serving">serving 2</string>
    <string name="ingredients">INGREDIENTS</string>
    <string name="directions">DIRECTIONS</string>
    <string name="show_steps">SHOW STEPS</string>
    <string name="previous_step">Previous Step</string>
    <string name="next_step">Next Step</string>
    <string name="_1">1</string>
    <string name="appwidget_text">Ingredient Widget</string>
    <string name="add_widget">Add widget</string>
    <string name="no_ingredients">No Ingredients Added To Widget</string>
    <string name="Null">null</string>
    <string name="add">Add</string>
    <string name="recipe_image">recipe image</string>
    <string name="nutella_pie">nutella pie</string>
    <string name="serving_2">serving 2</string>
</resources>
